# library_system

./: .gitignore  README.md  pyproject.toml
front_app/: package-lock.json  package.json
front_app/public/: index.html
front_app/src/: App.js  api.js
front_app/src/components/: addBook.js  bookList.js  loginForm.js  registerForm.js
libapp/book/: models.py  serializer.py  views.py
libapp/book/migrations/: 0001_initial.py  0002_alter_book_options.py
libapp/book/tests/: test_book_api.py
libapp/libapp/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
libapp/user/: models.py  serializer.py  views.py
libapp/user/management/commands/: load_samples.py
libapp/user/migrations/: 0001_initial.py  0002_alter_user_email.py
libapp/user/tests/: test_api_auth.py  test_user_register.py
